# Fractal

./: .gitignore  CMakeLists.txt  README.md  cmakeClean.sh  cudaFractal.cu  cudaFractal.h  gfx.cpp  gfx.h  init.sh  log.out  main.cpp  utils.h
